--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
